@@ -94,9 +94,8 @@ no-drops-block:
       enabled: false
 
 match:
-  item: '{id:"minecraft:gold_block",Count:1b}'
+  item: '{id:"minecraft:iron_door",Count:1b}'
   block:
-    disguised-block: iron_door[facing=north,hinge=right,powered=true,open=false]
 
     #  Changes the disguised BlockData of a block if its actual BlockData matches the states in this section
     #  States can optionally be nested inside each other (shown below) or not nested (especially for things like crops with only one BlockData tag)
@@ -114,11 +113,13 @@ match:
 
           #  As soon as "disguised-block" is found in a successful match section, the disguised BlockData of the block will be set to this value, and "match-states" will be exited
           disguised-block: iron_block
+          disguised-block2: iron_block
 
           #  Since this state appears in the same section as "disguised-block", it will never be checked and a block's disguised BlockData will never be diamond_block, even if it matches all the above states and is open
           open:
             state: true
             disguised-block: diamond_block
+            disguised-block2: diamond_block
 
         #  Any numbers at the end of a state name will be ignored, which allows multiple of the same state to be checked without causing yaml errors for having multiple keys with the same name
         #  Since this appears below a different state section, this will only be checked if the above section fails at some point
@@ -126,7 +127,16 @@ match:
           state: right
           open:
             state: false
-            disguised-block: emerald_block
+            disguised-block: warped_door
+            disguised-block2: warped_door
+
+            #  This functions the same as the main "disguised-sync-states" section that is a direct child of "block" (and has support for ending with "2", just like the main "disguised-sync-states")
+            sync-states:
+              - facing
+              - half
+              - hinge
+              - open
+              - powered
 
 custom-door:
   #  The multi custom block handler is versatile, so it will work for all items that become two placed blocks, like beds or doors
